[package]
name = "sortedcontainers"
version = "0.1.0-alpha.0"
authors = ["Fabio Baravalle <Fabio.Baravalle@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An experimental sorted data structure"
readme = "README.MD"
homepage = "https://github.com/fbrv/sortedcontainers"
repository = "https://github.com/fbrv/sortedcontainers"
keywords = ["sort", "datastructure", "sortedcontainer", "sortedcontainers"]
categories = ["data-structures", "algorithms", "sorted-containers"]
edition= "2021"
exclude = ["benchmarks"]

[dependencies]
thiserror = "1.0.30"

[dev-dependencies]
rand = "0.8.5"
more-asserts = "0.2.2"
