[package]
name = "sortedcontainers"
version = "0.2.1"
authors = ["Fabio Baravalle <Fabio.Baravalle@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An experimental sorted data structure"
readme = "README.MD"
homepage = "https://github.com/fbrv/sortedcontainers"
repository = "https://github.com/fbrv/sortedcontainers"
keywords = ["sorted", "collections", "datastructure", "sortedcontainers"]
categories = ["data-structures", "algorithms", "sorted-containers", "sort", "collections"]
edition= "2021"
exclude = ["benches"]

[dependencies]
thiserror = "1.0.30"

[dev-dependencies]
rand = "0.8.5"
more-asserts = "0.2.2"
criterion = "0.3.5"

[[bench]]
name = "sorted_containers"
path = "benches/sorted_containers.rs"
harness = false